# OffSploit

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cli_app.py  config.json.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
offsploit/: __init__.py  async_pipeline.py  attack_correlator.py  bloodhound_parser.py  chromadb_ingest.py  compiler_agent.py  config_schema.py  core_pipeline.py  docker_sandbox.py  evasion_engine.py  exceptions.py  llm_client.py  llm_queue.py  nmap_parser.py  payload_engine.py  preflight.py  prompts.json  rag_engine.py  reporter.py  response_parser.py  session_db.py  state_machine.py  structured_output.py  swarm_agents.py
tests/: test_step1_config_validation.py  test_step2_docker_security.py  test_step3_rag_metadata.py  test_step4_async_pipeline.py  test_step5_session_db.py  test_step6_web_app.py
web/: web_app.py
web/static/css/: style.css
web/templates/: index.html
